# rustconf

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: build.yml
.kiro/specs/generator-refactoring/: README.md  design.md  requirements.md  tasks.md
.kiro/specs/intermediate-client-crate/: design.md  requirements.md  tasks.md
.kiro/specs/restful-rpc-generation/: design.md  requirements.md  tasks.md
.kiro/specs/rustconf/: design.md  requirements.md  tasks.md
.kiro/specs/server-side-generation/: design.md  requirements.md  tasks.md
examples/interface-config/: Cargo.toml  README.md  build.rs
examples/interface-config/src/: main.rs
examples/interface-config/yang/: interface-config-simple.yang  interface-config.yang
examples/intermediate-client/: Cargo.toml  README.md  build.rs
examples/intermediate-client/src/: lib.rs
examples/intermediate-client/yang/: device-management.yang
examples/restful-basic/: Cargo.toml  README.md  build.rs
examples/restful-basic/src/: main.rs
examples/restful-basic/yang/: device-management.yang
examples/restful-custom-transport/: Cargo.toml  README.md
examples/restful-custom-transport/src/: main.rs
examples/restful-error-handling/: Cargo.toml  README.md
examples/restful-error-handling/src/: main.rs
examples/restful-error-handling/yang/: device-management.yang
examples/restful-interceptor/: Cargo.toml  README.md  build.rs
examples/restful-interceptor/src/: main.rs
examples/server-basic/: Cargo.toml  README.md  build.rs
examples/server-basic/src/: lib.rs  main.rs
examples/server-basic/yang/: device-management.yang
rustconf/: Cargo.toml
rustconf-runtime/: Cargo.toml  README.md
rustconf-runtime/src/: error.rs  lib.rs  transport.rs
rustconf-runtime/src/adapters/: hyper_adapter.rs  mod.rs  reqwest_adapter.rs
rustconf/proptest-regressions/parser/: lexer.txt
rustconf/src/: lib.rs
rustconf/src/generator/: config.rs  crud_tests.rs  error.rs  formatting.rs  integration_test.rs  mod.rs  naming.rs  notification_integration_test.rs  notification_tests.rs  notifications.rs  operations.rs  paths.rs  rpc_integration_test.rs  rpc_tests.rs  server_handlers.rs  server_notifications.rs  server_registry.rs  server_router.rs  server_stubs.rs  tests.rs  types.rs  url_builder.rs  url_path_example_test.rs  validation.rs
rustconf/src/generator/tests/: backward_compatibility.rs  cargo_toml_generation.rs  client_server_roundtrip.rs  config_validation.rs  crud_operations.rs  error_mapper_test.rs  error_mapping_test.rs  feature_compilation.rs  handler_registry.rs  hyper_adapter.rs  integration.rs  modular_generation.rs  modular_server_generation.rs  notifications.rs  reqwest_adapter.rs  restconf_client.rs  rpc_error_generation.rs  rpc_operations.rs  server_handler_generation.rs  server_notification_generation.rs  server_router_generation.rs  server_serialization.rs  server_stub_generation.rs  server_stub_integration.rs  type_generation.rs  url_path.rs  validation_integration.rs  validation_preservation.rs
rustconf/src/parser/: ast.rs  error.rs  lexer.rs  mod.rs  mod.test.rs  tests.rs  validation.test.rs
rustconf/src/parser/tests/: error.rs  expansion.rs  lexer.rs  parsing.rs  visitor.rs
rustconf/tests/: error_reporting_demo.rs  error_reporting_integration.rs  example_integration.rs  intermediate_crate_integration.rs  notification_publisher_integration.rs
rustconf/tests/fixtures/: test-notifications.yang
rustconf/tests/fixtures/test-end-user/: Cargo.toml  README.md
rustconf/tests/fixtures/test-end-user/src/: main.rs
rustconf/tests/fixtures/test-intermediate-crate/: Cargo.toml  README.md  build.rs
rustconf/tests/fixtures/test-intermediate-crate/src/: lib.rs
rustconf/tests/fixtures/test-intermediate-crate/yang/: test-device.yang
