[package]
name = "rustconf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate type-safe Rust bindings from RESTCONF/YANG specifications"
keywords = ["yang", "restconf", "codegen", "networking"]
categories = ["development-tools::build-utils", "parser-implementations"]

[dependencies]
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
