[package]
name = "device-client"
version = "0.1.0"
edition = "2021"
description = "Example intermediate client crate for device management RESTCONF API"
license = "MIT OR Apache-2.0"
publish = false

# This is an independent crate that demonstrates the intermediate client pattern
[workspace]

[features]
default = ["rustconf-runtime/reqwest"]

[dependencies]
rustconf-runtime = { path = "../../rustconf-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
rustconf = { path = "../../rustconf" }
