[package]
name = "restful-interceptor-example"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["reqwest-client"]
reqwest-client = ["reqwest", "rustconf-runtime/reqwest"]
hyper-client = ["hyper", "hyper-tls", "rustconf-runtime/hyper"]

[dependencies]
rustconf-runtime = { path = "../../rustconf-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json"], optional = true }
hyper = { version = "0.14", optional = true }
hyper-tls = { version = "0.5", optional = true }

[build-dependencies]
rustconf = { path = "../../rustconf" }
