[package]
name = "server-basic-example"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rustconf-runtime = { path = "../../rustconf-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt"] }

[build-dependencies]
rustconf = { path = "../../rustconf" }
