[package]
name = "test-intermediate-crate"
version = "0.1.0"
edition = "2021"
publish = false

# Prevent this test crate from being part of the parent workspace
[workspace]

[features]
default = ["rustconf-runtime/reqwest"]

[dependencies]
rustconf-runtime = { path = "../../../../rustconf-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
rustconf = { path = "../../.." }
